--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
       </button>
       <button class="nav-button" data-page="page2">
         <span class="nav-icon">📚</span>
-        <span class="nav-text">Katalóg</span>
+        <span class="nav-text">História otázok</span>
       </button>
       <button class="nav-button" data-page="page3">
         <span class="nav-icon">⚙️</span>
@@ -60,15 +60,15 @@
       </div>
     </div>
 
-    <!-- Page 2: Katalóg (placeholder) -->
+    <!-- Page 2: história otázok -->
     <div class="page" id="page-page2">
       <div class="container">
         <header>
-          <h1>Katalóg podporných opatrení</h1>
+          <h1>História otázok</h1>
         </header>
         <div class="main-content">
           <div class="placeholder-content">
-            <p>Obsah katalógu bude dostupný čoskoro...</p>
+            <p>Obsah históriebude dostupný čoskoro...</p>
           </div>
         </div>
       </div>
